<resources>
    <string name="app_name">lyred</string>
    <string name="select">选择MIDI文件</string>
    <string name="open">打开</string>
    <string name="file">你选择的是:</string>
    <string name="now_speed">1.0</string>
    <string name="the_speed">速度</string>
    <string name="convert">从MIDI转换</string>
    <string name="play">播放</string>
    <string name="stop">停止</string>
    <string name="state">已停止</string>
    <string name="save">保存坐标</string>
    <string name="show">设置坐标</string>
    <string name="pos">显示坐标</string>
    <string name="_21_n_21">请完全覆盖21个音符\n点击设置坐标后从第一排至第三排依次点击21个位置</string>
    <string name="open_float">开启悬浮窗</string>
    <string name="accessibility_service_description">开启无障碍点击</string>
    <string name="accessibility_service_label">lyred点击服务</string>
    <string name="_0_1">+0.1</string>
    <string name="_0__1">-0.1</string>
    <string name="up">向上调音</string>
    <string name="down">向下调音</string>
    <string name="hit">命中率</string>
    <string name="reset">还原</string>
</resources>