<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintVertical_bias="0.022" android:id="@+id/select" android:textSize="24sp"/>
    <Button
            android:text="@string/open"
            android:layout_width="89dp"
            android:layout_height="57dp" android:id="@+id/open"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/select"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.012"
            app:layout_constraintVertical_bias="0.01"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
<!--    <Button-->
<!--            android:text="@string/convert"-->
<!--            android:layout_width="108dp"-->
<!--            android:layout_height="58dp" android:id="@+id/convert"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@id/open"-->
<!--            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintVertical_bias="0.01"/>-->
    <TextView
            android:text="@string/file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/file"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/select" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintVertical_bias="0.024"/>
    <TextView
            android:layout_width="56dp"
            android:layout_height="49dp"
            android:ems="10"
            android:id="@+id/speed"
            app:layout_constraintTop_toBottomOf="@+id/file"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.04" app:layout_constraintVertical_bias="0.036"
            android:hint="@string/now_speed" android:autofillHints="1.0" android:textColorHint="#8D6E63"
            android:textSize="24sp" android:gravity="center"/>
    <TextView
            android:text="@string/the_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/the_speed"
            app:layout_constraintStart_toEndOf="@+id/speed"
            app:layout_constraintTop_toBottomOf="@+id/file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.047"/>
    <CheckBox
            android:text="@string/open_float"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/open_float"
            app:layout_constraintTop_toBottomOf="@id/speed" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintVertical_bias="0.004"/>
    <Button
            android:text="@string/_0__1"
            android:layout_width="76dp"
            android:layout_height="48dp" android:id="@+id/div"
            app:layout_constraintStart_toEndOf="@+id/the_speed"
            app:layout_constraintTop_toBottomOf="@+id/file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.038" style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>
    <Button
            android:text="@string/_0_1"
            android:layout_width="81dp"
            android:layout_height="49dp" android:id="@+id/add"
            app:layout_constraintStart_toEndOf="@id/div"
            app:layout_constraintTop_toBottomOf="@+id/file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.038" style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>

</androidx.constraintlayout.widget.ConstraintLayout>