<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="240dp"
                                                   android:layout_height="150dp" android:background="#4DFFFFFF">

    <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/play"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>
    <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/stop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.298"
            app:layout_constraintVertical_bias="1.0"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"/>
    <Button
            android:text="@string/save"
            android:layout_width="111dp"
            android:layout_height="48dp" android:id="@+id/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Surface"/>
    <Switch
            android:text="@string/pos"
            android:layout_width="111dp"
            android:layout_height="48dp" android:id="@+id/pos"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" tools:ignore="UseSwitchCompatOrMaterialXml"/>
    <CheckBox
            android:text="@string/show"
            android:layout_width="111dp"
            android:layout_height="48dp" android:id="@+id/show"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.47"/>


    <Button
            android:text="@string/convert"
            android:layout_width="89dp"
            android:layout_height="57dp" android:id="@+id/convert"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/show"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintVertical_bias="0.516"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>